--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Simple game created to try Canvas & sound handling",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "watch": "nodemon server.js"
   },
   "author": "Victor Dupuy",
   "license": "MIT",
@@ -13,5 +13,8 @@
     "body-parser": "^1.14.1",
     "express": "^4.13.3",
     "save": "^2.1.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.17.3"
   }
 }
